<resources>
    <string name="app_name">Calculadora</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_1">1</string>
    <string name="_mais">+</string>
    <string name="_menos">-</string>
    <string name="_9">9</string>
    <string name="_6">6</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_igual">=</string>
    <string name="_0">0</string>
    <string name="textview">TextView</string>
    <string name="calculadora">calculadora</string>
    <string name="fechar_calculadora">fechar calculadora</string>
    <string name="a_c">A/C</string>
    <string name="_Mult">*</string>
    <string name="_Div">/</string>
    <string name="_ponto">.</string>
</resources>